# MusicEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePreset.json  CMakePresets.json  CMakeUserPresets.json  LICENSE  MusicEngineConfig.cmake.in  README.md  README_CN.md  SongManagerConfig.cmake.in  conanfile.py  conanfile.txt  docs.md  main.cpp
.github/: PULL_REQUEST_TEMPLATE.md
cmake/: aarch64-toolchain.cmake  depends.cmake  toolchain-aarch64-gnu.cmake
docs/: CONTRIBUTING.md  MusicPlayer设计.md  专辑图片的维护逻辑.md
examples/: CMakeLists.txt  basic_usage.cpp  opencv_show.cpp  opencv_show.hpp
examples/MusicManager_test/: basic_usage.cpp
examples/miniaudio_test/: CMakeLists.txt  main.cpp
examples/music_manager_test/: CMakeLists.txt  basic_usage.cpp  main.cpp
examples/music_player_basic_test/: CMakeLists.txt  main.cpp
examples/music_player_seek_test/: CMakeLists.txt  main.cpp
examples/music_player_test/: CMakeLists.txt  main.cpp
include/: Music.h  MusicManager.h  MusicPlayer.h  Song.h  SongManager.h  music_manager.h  music_player.h
lib/: SongManager.cpp  SongManager.h  SongParser.cpp  SongParser.h  song.h
profiles/: aarch64_profile
src/: CMakeLists.txt  MusicManager.cpp  MusicParser.hpp  ParserLogger.cpp  ParserLogger.hpp  SongManager.cpp  SongManager.h  SongParser.cpp  SongParser.h  SongParser.hpp  ffprobe.hpp
src/MusicManager/: CoverArtCache.cpp  CoverArtCache.hpp  MusicManager.cpp  MusicParser.cpp  MusicParser.hpp  cover_art_cache.cpp  music_manager.cpp
src/MusicPlayer/: MusicPlayer.cpp  readme.md
src/internal/: SongParser.h
src/music_manager/: cover_art_cache.cpp  cover_art_cache.hpp  music_manager.cpp  music_parser.cpp  music_parser.hpp  readme.md
src/music_player/: music_player.cpp
